--- a/src/styles/components/work.css
+++ b/src/styles/components/work.css
@@ -32,144 +32,205 @@ html {
 body {
   font-family: "Prata", serif; }
 
-main {
-  transition: transform 1.5s cubic-bezier(0.81, 0.14, 0.22, 0.86); }
+.screens {
+  transition: transform 1s cubic-bezier(0.81, 0.14, 0.22, 0.86); }
 
-.work > * {
+.screens > * {
   height: 100vh;
   width: 100%;
   position: relative;
   overflow: hidden; }
-  .work > * .text {
-    padding-left: 30px;
-    padding-right: 30px;
-    width: 100%;
+
+.screen-navigation {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 100%;
+  clear: both;
+  max-width: 1340px;
+  margin: 0 auto;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 10;
+  overflow: visible; }
+  .screen-navigation::after {
     clear: both;
-    max-width: 1340px;
+    content: "";
+    display: table; }
+  .screen-navigation.black li {
+    background: #03091f; }
+  .screen-navigation li {
+    -webkit-transition: all 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    -moz-transition: all 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    transition: all 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    height: 12px;
+    width: 12px;
     margin: 0 auto;
+    display: block;
+    margin-bottom: 30px;
+    background: #ffffff;
+    overflow: visible;
     position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    z-index: 10; }
-    .work > * .text::after {
-      clear: both;
-      content: "";
-      display: table; }
-    .work > * .text h1 {
-      font-size: 22px;
-      letter-spacing: .1em;
-      font-family: "Economica", sans-serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      text-decoration: none; }
-      @media screen and (max-width: 1280px) {
-        .work > * .text h1 {
-          font-size: 21.14286px; } }
-      @media screen and (max-width: 1024px) {
-        .work > * .text h1 {
-          font-size: 20.28571px; } }
-      @media screen and (max-width: 900px) {
-        .work > * .text h1 {
-          font-size: 19.42857px; } }
-      @media screen and (max-width: 768px) {
-        .work > * .text h1 {
-          font-size: 18.57143px; } }
-      @media screen and (max-width: 640px) {
-        .work > * .text h1 {
-          font-size: 17.71429px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text h1 {
-          font-size: 16.85714px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text h1 {
-          font-size: 16.85714px; } }
-      @media screen and (max-width: 320px) {
-        .work > * .text h1 {
-          font-size: 16px; } }
-    .work > * .text h2 {
-      font-size: 120px;
-      font-family: 'Elevation';
-      font-weight: 300;
-      letter-spacing: -.01em;
-      margin: 15px 0; }
-      @media screen and (max-width: 1280px) {
-        .work > * .text h2 {
-          font-size: 107.42857px; } }
-      @media screen and (max-width: 1024px) {
-        .work > * .text h2 {
-          font-size: 94.85714px; } }
-      @media screen and (max-width: 900px) {
-        .work > * .text h2 {
-          font-size: 82.28571px; } }
-      @media screen and (max-width: 768px) {
-        .work > * .text h2 {
-          font-size: 69.71429px; } }
-      @media screen and (max-width: 640px) {
-        .work > * .text h2 {
-          font-size: 57.14286px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text h2 {
-          font-size: 44.57143px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text h2 {
-          font-size: 44.57143px; } }
-      @media screen and (max-width: 320px) {
-        .work > * .text h2 {
-          font-size: 32px; } }
-    .work > * .text p {
-      font-size: 20px;
-      font-weight: 300;
-      margin-bottom: 30px; }
-    .work > * .text a, .work > * .text button {
-      font-size: 22px;
-      letter-spacing: .1em;
-      font-family: "Economica", sans-serif;
-      font-weight: normal;
-      text-transform: uppercase;
-      text-decoration: none;
-      -webkit-transition: all 0.15s ease-in-out;
-      -moz-transition: all 0.15s ease-in-out;
-      transition: all 0.15s ease-in-out;
-      display: inline-block;
-      border: 2px solid #ffffff;
-      background: transparent;
-      padding: 10px 20px;
+    opacity: .7; }
+    .screen-navigation li:last-child {
+      margin-bottom: 0; }
+  .screen-navigation li.active {
+    -webkit-transform: scale(3);
+    -moz-transform: scale(3);
+    -ms-transform: scale(3);
+    -o-transform: scale(3);
+    transform: scale(3);
+    opacity: 1; }
+
+.text {
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 100%;
+  clear: both;
+  max-width: 1340px;
+  margin: 0 auto;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 10; }
+  .text::after {
+    clear: both;
+    content: "";
+    display: table; }
+  @media screen and (max-width: 640px) {
+    .text {
+      text-align: center; } }
+  @media screen and (max-width: 320px) {
+    .text {
+      top: calc(50% - 90px); } }
+  .text h1 {
+    font-size: 22px;
+    letter-spacing: .1em;
+    font-family: "Economica", sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    text-decoration: none; }
+    @media screen and (max-width: 1280px) {
+      .text h1 {
+        font-size: 21.14286px; } }
+    @media screen and (max-width: 1024px) {
+      .text h1 {
+        font-size: 20.28571px; } }
+    @media screen and (max-width: 900px) {
+      .text h1 {
+        font-size: 19.42857px; } }
+    @media screen and (max-width: 768px) {
+      .text h1 {
+        font-size: 18.57143px; } }
+    @media screen and (max-width: 640px) {
+      .text h1 {
+        font-size: 17.71429px; } }
+    @media screen and (max-width: 480px) {
+      .text h1 {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 480px) {
+      .text h1 {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 320px) {
+      .text h1 {
+        font-size: 16px; } }
+  .text h2 {
+    font-size: 120px;
+    font-family: 'Elevation';
+    font-weight: 300;
+    letter-spacing: -.01em;
+    margin: 15px 0; }
+    @media screen and (max-width: 1280px) {
+      .text h2 {
+        font-size: 108px; } }
+    @media screen and (max-width: 1024px) {
+      .text h2 {
+        font-size: 96px; } }
+    @media screen and (max-width: 900px) {
+      .text h2 {
+        font-size: 84px; } }
+    @media screen and (max-width: 768px) {
+      .text h2 {
+        font-size: 72px; } }
+    @media screen and (max-width: 640px) {
+      .text h2 {
+        font-size: 60px; } }
+    @media screen and (max-width: 480px) {
+      .text h2 {
+        font-size: 48px; } }
+    @media screen and (max-width: 480px) {
+      .text h2 {
+        font-size: 48px; } }
+    @media screen and (max-width: 320px) {
+      .text h2 {
+        font-size: 36px; } }
+    @media screen and (max-width: 320px) {
+      .text h2 {
+        margin-bottom: 10px; } }
+  .text p {
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 30px; }
+    @media screen and (max-width: 320px) {
+      .text p {
+        font-size: 16px; } }
+  .text a, .text button {
+    font-size: 22px;
+    letter-spacing: .1em;
+    font-family: "Economica", sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-transition: all 0.15s ease-in-out;
+    -moz-transition: all 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
+    display: inline-block;
+    border: 2px solid #ffffff;
+    background: transparent;
+    padding: 10px 20px;
+    color: #ffffff;
+    border-radius: 0;
+    min-width: 100px;
+    line-height: 26px;
+    height: 50px;
+    text-align: center; }
+    @media screen and (max-width: 1280px) {
+      .text a, .text button {
+        font-size: 21.14286px; } }
+    @media screen and (max-width: 1024px) {
+      .text a, .text button {
+        font-size: 20.28571px; } }
+    @media screen and (max-width: 900px) {
+      .text a, .text button {
+        font-size: 19.42857px; } }
+    @media screen and (max-width: 768px) {
+      .text a, .text button {
+        font-size: 18.57143px; } }
+    @media screen and (max-width: 640px) {
+      .text a, .text button {
+        font-size: 17.71429px; } }
+    @media screen and (max-width: 480px) {
+      .text a, .text button {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 480px) {
+      .text a, .text button {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 320px) {
+      .text a, .text button {
+        font-size: 16px; } }
+    .text a:active, .text a:focus, .text button:active, .text button:focus {
+      outline: 0; }
+    .text a:hover, .text button:hover {
       color: #ffffff;
-      border-radius: 0;
-      min-width: 100px;
-      line-height: 26px;
-      height: 50px; }
-      @media screen and (max-width: 1280px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 21.14286px; } }
-      @media screen and (max-width: 1024px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 20.28571px; } }
-      @media screen and (max-width: 900px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 19.42857px; } }
-      @media screen and (max-width: 768px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 18.57143px; } }
-      @media screen and (max-width: 640px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 17.71429px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 16.85714px; } }
-      @media screen and (max-width: 480px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 16.85714px; } }
-      @media screen and (max-width: 320px) {
-        .work > * .text a, .work > * .text button {
-          font-size: 16px; } }
-      .work > * .text a:active, .work > * .text a:focus, .work > * .text button:active, .work > * .text button:focus {
-        outline: 0; }
-      .work > * .text a:hover, .work > * .text button:hover {
-        color: #ffffff;
-        border: 2px solid #ffffff;
-        cursor: pointer; }
+      border: 2px solid #ffffff;
+      cursor: pointer; }
