--- a/src/styles/components/cardinal-shack.css
+++ b/src/styles/components/cardinal-shack.css
@@ -36,6 +36,23 @@ body {
   background: url("/img/cardinal-shack.jpg") no-repeat;
   background-size: cover;
   background-position: 35%; }
+  .cardinal-shack:before {
+    -webkit-transition: background-color 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    -moz-transition: background-color 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    transition: background-color 1s cubic-bezier(0.81, 0.14, 0.22, 0.86);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    content: '';
+    background-color: rgba(3, 9, 31, 0.4);
+    z-index: 1; }
   .cardinal-shack .text {
     color: #ffffff;
     text-align: right; }
+    @media screen and (max-width: 640px) {
+      .cardinal-shack .text {
+        text-align: center; } }
