--- a/src/styles/components/cardinal-shack.scss
+++ b/src/styles/components/cardinal-shack.scss
@@ -5,8 +5,19 @@
   background-size: cover;
   background-position: 35%;
 
+  &:before {
+    @include transition(background-color 1s cubic-bezier(.81,.14,.22,.86));
+    @include position(absolute, 0 0 0 0);
+    @include size(100%);
+    content: '';
+    background-color: rgba($black, .4);
+    z-index: 1;
+  }
+
   .text {
     color: $white;
     text-align: right;
+
+    @include bp(640) { text-align: center; }
   }
 } 
