--- a/src/styles/components/github.css
+++ b/src/styles/components/github.css
@@ -34,3 +34,53 @@ body {
 
 .github .text {
   color: #03091f; }
+  .github .text a, .github .text button {
+    font-size: 22px;
+    letter-spacing: .1em;
+    font-family: "Economica", sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    text-decoration: none;
+    -webkit-transition: all 0.15s ease-in-out;
+    -moz-transition: all 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
+    display: inline-block;
+    border: 2px solid #03091f;
+    background: transparent;
+    padding: 10px 20px;
+    color: #03091f;
+    border-radius: 0;
+    min-width: 100px;
+    line-height: 26px;
+    height: 50px;
+    text-align: center; }
+    @media screen and (max-width: 1280px) {
+      .github .text a, .github .text button {
+        font-size: 21.14286px; } }
+    @media screen and (max-width: 1024px) {
+      .github .text a, .github .text button {
+        font-size: 20.28571px; } }
+    @media screen and (max-width: 900px) {
+      .github .text a, .github .text button {
+        font-size: 19.42857px; } }
+    @media screen and (max-width: 768px) {
+      .github .text a, .github .text button {
+        font-size: 18.57143px; } }
+    @media screen and (max-width: 640px) {
+      .github .text a, .github .text button {
+        font-size: 17.71429px; } }
+    @media screen and (max-width: 480px) {
+      .github .text a, .github .text button {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 480px) {
+      .github .text a, .github .text button {
+        font-size: 16.85714px; } }
+    @media screen and (max-width: 320px) {
+      .github .text a, .github .text button {
+        font-size: 16px; } }
+    .github .text a:active, .github .text a:focus, .github .text button:active, .github .text button:focus {
+      outline: 0; }
+    .github .text a:hover, .github .text button:hover {
+      color: #03091f;
+      border: 2px solid #03091f;
+      cursor: pointer; }
