--- a/src/styles/ui/_hero-image.scss
+++ b/src/styles/ui/_hero-image.scss
@@ -1,8 +1,8 @@
-@mixin hero-image($background-url) {
-  @include scale(height 600px 300px);
+@mixin hero-image($background-url, $color: #fff) {
   @include transition(opacity 2s ease-in-out);
-  @include position(fixed, 0 0 null 0);
+  @include position(fixed, 0 0 0 0);
   background-image: url(#{$background-url});
   background-position: center;
   background-size: cover;
+  background-color: $color;
 }
