--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -1,5 +1,13 @@
 @import '../import.scss';
 
-.about header {
-  @include hero-image('/img/about-hero.jpg');
+main .about {
+  @include position(fixed, 0 0 0 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    @include scale(font-size 32px 20px);
+    text-align: center;
+  }
 }
