--- a/src/styles/components/github.css
+++ b/src/styles/components/github.css
@@ -8,13 +8,6 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
-.container {
-  width: 100%;
-  max-width: 1340px;
-  margin: 0 auto;
-  position: relative;
-  padding: 0 30px; }
-
 @font-face {
   font-family: "Elevation";
   src: url("/fonts/Elevation.eot");
@@ -41,9 +34,9 @@ body {
     font-weight: normal;
     text-transform: uppercase;
     text-decoration: none;
-    -webkit-transition: all 0.15s ease-in-out;
-    -moz-transition: all 0.15s ease-in-out;
-    transition: all 0.15s ease-in-out;
+    -webkit-transition: all 0.05s ease-in-out;
+    -moz-transition: all 0.05s ease-in-out;
+    transition: all 0.05s ease-in-out;
     display: inline-block;
     border: 2px solid #03091f;
     background: transparent;
@@ -84,3 +77,5 @@ body {
       color: #03091f;
       border: 2px solid #03091f;
       cursor: pointer; }
+    .github .text a:active, .github .text button:active {
+      color: transparent; }
